2009-06-22  John W. Eaton  <jwe@octave.org>

	* statistics/base/var.m: Return zero for scalar case.  Handle
	empty arguments in a Matlab compatible way.  New tests.

2009-06-18  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Change the default x11 fontspec from '*,0'
	to ',0' to avoid delays searching the fontpath for a font named '*'.

2009-06-18  Daniel Gualberto <daniel@alacer.com.br>

	* polynomial/mpoles.m: Fix infinite loop for a multiplicity of
	poles at zero. Test added.

2009-06-17  Bertrand Roessli <bertrand.roessli@psi.ch>

	* plot/axis.m: Fix bug for 'axis tight' with multiple surface plots,
	add demo.

2009-06-14  Ben Abbott <bpabbott@mac.com>

	* plot/quiver.m: Add 'clf' to demos.
	* plot/plotyy.m: Fix compatibility with subplot, add listeners for
	dataaspectratio, and add a demo.

2009-06-14  Eric Chassande-Mottin <echassandemottin@gmail.com>

	* plot/plotyy.m: Correct behavior when there is no currentfigure.

2009-06-11  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Fix logic associated with 'have_ghostscript'.
	* plot/gnuplot_drawnow.m: Add support for pdfcairo and pngcairo
	terminals. Minor code improvements.
	* plot/print.m: Associate '-mono' with devices ps, ps2, eps, & eps2.
	Have '-mono' render all objects in monochrome.
	For pdf or png output, favor gnuplot's cairo terminals.

2009-06-10  Marco Caliari <marco.caliari@univr.it>

	* plot/hold.m: Add demo including a hggroup.
	* plot/__go_draw_axes__.m: Fix order when pushing group children onto
	the axes kid list.
	* general/quadgk.m: Better waypoint transform.

2009-06-09  David Bateman  <dbateman@free.fr>

	* general/quadgk.m: Add test case and fixed doubly infinite 
	waypoint transform for x = 0 case.

2009-06-09  Marco Caliari <marco.caliari@univr.it>

	* general/quadgk.m: Fix doubly infinite transformation to the finite
	interval.

2009-06-08  Ben Abbott <bpabbott@mac.com>

	* plot/axis.m: Fix bug for 'axis tight' with multiple lines, modify
	demo.
