@@ -1,3 +1,11 @@
+2009-06-22  Ben Abbott <bpabbott@mac.com>
+
+	* plot/grid.m: Add missing semi-colon. Allow grid to be toggled
+	on/off for each axis independently. Gnuplot requires that minor
+	ticks accompany minor ticks. Add demo.
+	* plot/__go_draw_axes__.m: For {x,y,z}scale == 'log' use 10 minor
+	ticks.
+
 2009-06-22  John W. Eaton  <jwe@octave.org>
 
 	* statistics/base/var.m: Return zero for scalar case.  Handle
